syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/GalichAnton/auth/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User API"
    version: "1.0.0"
    contact: {
      name: "Anton Galich"
      email: "aagalich@avito.ru"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserV1 {
  // Создает пользователя
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/user/v1"
      body: "*"
    };
  }

  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/user/v1"
    };
  }

  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      put: "/user/v1"
      body: "*"
    };
  }

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1"
    };
  }
}

message UserToCreate {
  // Имя пользователя
  string name = 1 [(validate.rules).string = {min_len: 1, max_len: 50}];
  // Email пользователя
  string email = 2 [(validate.rules).string.email = true];
  // Пароль пользователя
  string password = 3 [(validate.rules).string = {min_len: 6, max_len: 24}];;
  string password_confirm = 4;
  Role role = 5;
}

message UserInfo {
  string name = 1;
  string email = 2;
  string password = 3;
  Role role = 4;
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CreateRequest {
  UserToCreate user = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
    User user = 1;
}

message UpdateRequest {
  int64 id = 1;
  UserInfo info = 2;
}

message DeleteRequest {
  int64 id = 1;
}

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}
